our plants section complete with mobile responsive

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>Faugei | Flowers Shop</title>
 </head>
 <body class="inter">
+
     <nav class="nav container flex justify-between">
         <img class="logo" src="./assets/logo.png" alt="faugei logo">
 <!-- logo size may need to change on small screen responsive -->
@@ -36,6 +37,7 @@
                 </li></a>
         </ul>
     </nav>
+
     <section class="hero container flex">
         <div class="hero-content">
             <h1 class="noto-serif text-[4rem] font-bold">ALWAYS <span class="text-[#E95A08]">FRESH <br> FLOWERS</span></h1>
@@ -43,5 +45,61 @@
         </div>
         <img src="./assets/hero-flower.png" alt="">
     </section>
+
+    <section class="plants container">
+        <h2 class="noto-serif text-[3.15rem] font-bold text-center"><span class="text-[#E95A08]">Our</span> Plants</h2>
+        <p class="text-[rgba(0,0,0,0.5)] text-[1.4rem] text-center">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        <div class="plant-card-container">
+            <div class="plant-card text-center grid place-items-center">
+                <img src="./assets/sample-flower-image.png" alt="">
+                <h5 class="text-[1.45rem] font-medium">Lily Blossom</h5>
+                <h5 class="text-[1.45rem] font-bold">20 USD</h5>
+                <button class="btn bg-[#E95A08]">ADD TO CART</button>
+            </div>
+            <div class="plant-card text-center grid place-items-center">
+                <img src="./assets/sample-flower-image.png" alt="">
+                <h5 class="text-[1.45rem] font-medium">Lily Blossom</h5>
+                <h5 class="text-[1.45rem] font-bold">20 USD</h5>
+                <button class="btn bg-[#E95A08]">ADD TO CART</button>
+            </div>
+            <div class="plant-card text-center grid place-items-center">
+                <img src="./assets/sample-flower-image.png" alt="">
+                <h5 class="text-[1.45rem] font-medium">Lily Blossom</h5>
+                <h5 class="text-[1.45rem] font-bold">20 USD</h5>
+                <button class="btn bg-[#E95A08]">ADD TO CART</button>
+            </div>
+            <div class="plant-card text-center grid place-items-center">
+                <img src="./assets/sample-flower-image.png" alt="">
+                <h5 class="text-[1.45rem] font-medium">Lily Blossom</h5>
+                <h5 class="text-[1.45rem] font-bold">20 USD</h5>
+                <button class="btn bg-[#E95A08]">ADD TO CART</button>
+            </div>
+            <div class="plant-card text-center grid place-items-center">
+                <img src="./assets/sample-flower-image.png" alt="">
+                <h5 class="text-[1.45rem] font-medium">Lily Blossom</h5>
+                <h5 class="text-[1.45rem] font-bold">20 USD</h5>
+                <button class="btn bg-[#E95A08]">ADD TO CART</button>
+            </div>
+            <div class="plant-card text-center grid place-items-center">
+                <img src="./assets/sample-flower-image.png" alt="">
+                <h5 class="text-[1.45rem] font-medium">Lily Blossom</h5>
+                <h5 class="text-[1.45rem] font-bold">20 USD</h5>
+                <button class="btn bg-[#E95A08]">ADD TO CART</button>
+            </div>
+            <div class="plant-card text-center grid place-items-center">
+                <img src="./assets/sample-flower-image.png" alt="">
+                <h5 class="text-[1.45rem] font-medium">Lily Blossom</h5>
+                <h5 class="text-[1.45rem] font-bold">20 USD</h5>
+                <button class="btn bg-[#E95A08]">ADD TO CART</button>
+            </div>
+            <div class="plant-card text-center grid place-items-center">
+                <img src="./assets/sample-flower-image.png" alt="">
+                <h5 class="text-[1.45rem] font-medium">Lily Blossom</h5>
+                <h5 class="text-[1.45rem] font-bold">20 USD</h5>
+                <button class="btn bg-[#E95A08]">ADD TO CART</button>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
