Complete trusted lover section with trusted badge

--- a/index.html
+++ b/index.html
@@ -100,6 +100,22 @@
             </div>
         </div>
     </section>
+    
+    <Section class="container flex">
+        <div class="lover flex">
+            <img src="./assets/flower-store.png" alt="">
+            <div class="lover-content">
+                <h2 class="noto-serif text-[3.15rem] font-bold">Flower & Plants Lover</h2>
+                <ul class="text-[rgba(0,0,0,0.5)] text-[1.4rem]">
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
+            </div>
+        </div>
+        <img class="trasted-badge" src="./assets/trusted-badge.png" alt="">
+    </Section>
 
+    
 </body>
 </html>
