join section complete without responsive

--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
                 </div>
             </div>
     </section>
+
+    <section class="join-section text-center text-white">
+        <h2 class="noto-serif text-[3rem] font-bold">Join the colorful Bunch</h2>
+        <div class="join-content">
+            <input type="email" name="email" id="email" placeholder="Write email" class="text-[rgba(0,0,0,0.5)]">
+            <button>Subscribe</button>
+        </div>
+    </section>
 </body>
 </html>
 
