--- a/index.html
+++ b/index.html
@@ -146,5 +146,44 @@
             <button>Subscribe</button>
         </div>
     </section>
+
+    <footer class="container flex">
+        <div class="company">
+            <img src="./assets/logo.png" alt="">
+            <p class="text-[rgba(0,0,0,0.5)] text-[1.4rem]">
+                Indulge your senses with the beauty and fragrance of our fresh flower shop. 
+            </p>
+        </div>
+        <div class="manu">
+            <p class="text-[rgba(0,0,0,0.5)] text-[1.4rem]"><a href="#">Home</a></p>
+
+            <p class="text-[rgba(0,0,0,0.5)] text-[1.4rem]"><a href="#">About us</a></p>
+
+            <p class="text-[rgba(0,0,0,0.5)] text-[1.4rem]"><a href="#">Blog</a></p>
+
+            <p class="text-[rgba(0,0,0,0.5)] text-[1.4rem]"><a href="#">FAQ</a></p>
+
+            <p class="text-[rgba(0,0,0,0.5)] text-[1.4rem]"><a href="#">Contact us</a></p>
+        </div>
+
+        <div class="manu">
+            <p class="text-[rgba(0,0,0,0.5)] text-[1.4rem]"><a href="#">Features</a></p>
+
+            <p class="text-[rgba(0,0,0,0.5)] text-[1.4rem]"><a href="#">Pricing</a></p>
+
+            <p class="text-[rgba(0,0,0,0.5)] text-[1.4rem]"><a href="#">Privacy Policy</a></p>
+
+            <p class="text-[rgba(0,0,0,0.5)] text-[1.4rem]"><a href="#">Terms of Service</a></p>
+
+            <p class="text-[rgba(0,0,0,0.5)] text-[1.4rem]"><a href="#">Help Center</a></p>
+        </div>
+
+        <div class="social-link flex">
+            <img src="./assets/icon-linkedin.png" alt="">
+            <img src="./assets/icon-twitter.png" alt="">
+            <img src="./assets/icon-facebook.png" alt="">
+            <img src="./assets/icon-youtube.png" alt="">
+        </div>
+    </footer>
 </body>
 </html>
