final commit for assignment and some optional hover effect

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <a href="#">
                 <li class="nav-item">Home</li></a>
             <a href="#">
-                <li class="nav-item text-[#8987A1]">Shop</li></a>
+                <li class="nav-item text-[#8987A1] hover:text-white">Shop</li></a>
             <a href="#">
-                <li class="nav-item text-[#8987A1]">About us</li></a>
+                <li class="nav-item text-[#8987A1] hover:text-white">About us</li></a>
             <a href="#">
                 <li class="nav-item2 flex items-center gap-3">
                     <i class="fa-solid fa-cart-shopping"></i>
